LoginPage/login-chart/templates/mysql-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: mysql-deploy 
spec:
 replicas: 1
 selector:
  matchLabels:
   db: mysql
 template:
  metadata:
   labels:
    db: mysql

  spec:
   containers:
    - name: mysql
      image: mysql:8.0

      ports:
      - containerPort: 3306

      volumeMounts:
      - name: mysql-storage 
        mountPath: /var/lib/mysql 
   volumes:
   - name: mysql-storage 
     persistentVolumeClaim:
      claimName: mysql-pvc
