LoginPage/login-chart/templates/spring-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: spring-deploy
spec:
 replicas: 1
 selector:
  matchLabels:
   app: login
 template:
  metadata:
   labels:
    app: login
  spec:
   containers:
   - name: spring-login
     image: vittalsai278964/loginpage-springboot:22
     ports:
     - containerPort: 1725
     readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 1725
          initialDelaySeconds: 10
          periodSeconds: 5

     livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 1725
          initialDelaySeconds: 30
          periodSeconds: 10
