LoginPage/login-chart/templates/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: mysql
spec:
 selector:
  db: mysql
 ports:
 - port: 3306
   targetPort: 3306
