LoginPage/login-chart/templates/spring-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: spring-service 
spec:
 type: NodePort
 selector:
  app: login
 ports:
 - port: 1725
   targetPort: 1725
